--- a/style.css
+++ b/style.css
@@ -691,8 +691,7 @@ li.language {
     margin-right: auto;
     top: 0;
     width: 375px;
-    height: 100vh;
-    z-index: 100;
+    height: 812px;
     background: #6070ff;
     padding: 1em;
     color: #fff;
