--- a/style.css
+++ b/style.css
@@ -691,11 +691,12 @@ li.language {
     margin-right: auto;
     top: 0;
     width: 375px;
-    height: 812px;
+    height: 792px;
+    z-index: 800;
     background: #6070ff;
     padding: 1em;
     color: #fff;
-    opacity:0.95;
+    opacity: 0.95;
   }
 
   #menu-bar {
@@ -1046,7 +1047,7 @@ li.language {
 
   .up-down {
     position: absolute;
-    right: 135px;
+    right: 45px;
     border-bottom: none;
   }
 
