--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 
+@font-face {
+  font-family: Poppins-bold;
+  src: url(./Poppins.ttf);
+}
+
+@font-face {
+  font-family: Poppins-regular;
+  src: url(./Poppins-Regular.ttf);
+}
+
 body {
   max-width: 1440px;
   background-color: #e5e5e5;
@@ -7,6 +17,163 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.modal {
+  padding-top: 50px;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background: #c1c7d0;
+}
+
+.language-button {
+  margin: 5px;
+}
+
+.pop-up-wrap {
+  background-color: #fff;
+  width: 100%;
+  height: auto;
+  margin: 1rem;
+  border-radius: 10px;
+  padding: 0 1rem 1rem;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+}
+
+.canopy-modal {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding: 0;
+  margin-top: 0;
+  height: 1.5rem;
+}
+
+#canopy {
+  list-style-type: none;
+  color: #344563;
+}
+
+.see-live-btn {
+  display: flex;
+  align-items: center;
+  float: left;
+  max-width: 140px;
+  margin-right: 0.7rem;
+  padding: 10px 4px;
+}
+
+.see-source-btn {
+  display: flex;
+  align-items: center;
+  float: left;
+  max-width: 140px;
+  padding: 12px 4px;
+  margin-right: 0.7rem;
+}
+
+.live-icon {
+  margin-left: 15px;
+}
+
+#modal-text {
+  max-width: 65%;
+  margin-right: 10px;
+}
+
+.tag-wrap {
+  display: flex;
+  flex-direction: column;
+}
+
+#github-modal-icon {
+  margin-left: 5px;
+}
+
+.pop-up-text-content {
+  display: flex;
+  box-sizing: border-box;
+}
+
+.pop-up-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100%;
+  margin: 0;
+}
+
+.poppins {
+  font-family: Poppins-bold, sans-serif;
+  color: #172b4d;
+}
+
+.poppins-regular {
+  font-family: Poppins-regular, sans-serif;
+}
+
+.pop-up-closeBtn {
+  float: right;
+  font-size: 30px;
+  color: #000;
+}
+
+.pop-up-closeBtn:hover {
+  cursor: pointer;
+}
+
+.languages {
+  list-style-type: none;
+  float: left;
+  background-color: #ebebff;
+  color: #6070ff;
+  padding: 4px 12px;
+  margin-right: 50px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  margin-left: -40px;
+}
+
+.pop-up-image-wrap {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.snapshoot {
+  width: 95%;
+  max-height: 586px;
+  margin-bottom: 20px;
+  margin-left: 8px;
+}
+
+#about-ul {
+  justify-content: left;
+  padding: 0;
+}
+
+.about-li {
+  margin: 0;
+  padding: 0;
+  float: left;
+  margin-right: 25px;
+  font-size: small;
+  color: #7a869a;
+}
+
+button.poppins-regular {
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+}
+
+/* end of pop up styling */
 
 header {
   position: relative;
@@ -174,6 +341,9 @@ header {
   background-image: url("images/Vector\(3\).svg");
   background-repeat: no-repeat;
 }
+
+/* popover */
+
 
 /* main patr of page */
 
@@ -376,6 +546,191 @@ article {
   color: #fff;
   opacity: 0.8;
 }
+
+.section-phone {
+  display: none;
+}
+
+.popover-all {
+  display: none;
+}
+
+div.popover-display {
+  display: block;
+}
+
+.pop-over {
+  max-width: 1156px;
+  height: 1163px;
+  z-index: 100;
+  background-color: #fff;
+  margin-top: 24px;
+  border-radius: 16px;
+  margin-left: 166px;
+  margin-right: 166px;
+}
+
+.section-a {
+  display: flex;
+  flex-direction: row;
+  padding: 0 16px 0 16px;
+  margin-top: 0;
+  justify-content: space-between;
+}
+
+.section-a h2 {
+  width: 1056px;
+  height: 40px;
+  font-family: Poppins-bold, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  margin-top: 24px;
+}
+
+.section-a img {
+  margin-top: 18px;
+}
+
+.section-b ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  margin-left: -20px;
+  font-family: Poppins-bold, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #7a869a;
+}
+
+.section-b li:first-child {
+  list-style-type: none;
+  width: 55px;
+  height: 16px;
+  color: #344563;
+}
+
+.section-b li {
+  margin-right: 35px;
+  margin-top: 10px;
+}
+
+.section-c img {
+  width: 95.67%;
+  height: 586px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 2.077%;
+  margin-right: 2.077%;
+}
+
+.container-pop {
+  width: 95.87%;
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.container-pop .section-d {
+  float: left;
+  clear: both;
+  width: 65.34%;
+  height: 382px;
+  font-family: Poppins-bold, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #344563;
+  margin-left: 24px;
+  margin-top: 40px;
+}
+
+.container-pop .section-d p {
+  padding: 2px 0 2px 5px;
+}
+
+.container-pop .section-e {
+  position: absolute;
+  top: 781px;
+  left: 62%;
+  width: 20%;
+  margin-left: -20px;
+}
+
+.container-pop .section-e .nav-pop ul {
+  display: flex;
+  flex-wrap: wrap;
+  font-family: Poppins-bold, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  list-style-type: none;
+  margin-left: -20px;
+  margin-top: 20px;
+}
+
+.container-pop .section-e ul li {
+  margin-right: 10px;
+  align-items: center;
+  padding: 4px 12px;
+  background: #ebebff;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.container-pop .section-f {
+  position: absolute;
+  top: 889px;
+  left: 60%;
+  width: 28%;
+  float: right;
+  display: flex;
+  flex-flow: wrap;
+  margin-top: 10px;
+  margin-left: 8px;
+}
+
+.container-pop .section-f button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 138px;
+  height: 48px;
+  color: #396df2;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border: 1px solid #396df2;
+  border-radius: 8px;
+  margin-right: 20px;
+}
+
+.container-pop .section-f button p {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  margin-left: 5px;
+  font-family: Poppins-bold, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  text-align: center;
+  margin-right: 10px;
+  margin-top: 8px;
+}
+
+.container-pop .section-f button img {
+  padding-right: 6px;
+}
+
 
 /* about me part */
 
@@ -679,7 +1034,64 @@ li.language {
     display: none;
   }
 
+  article #close-menu {
+    display: none;
+  }
+
   /* today */
+
+  .modal {
+    width: 375px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .pop-up-wrap {
+    height: auto;
+    width: 100%;
+  }
+
+  .language-button {
+    margin-left: -30px;
+  }
+
+  #modal-text {
+    max-width: 100%;
+    margin-right: 10px;
+  }
+
+  .tag-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .languages {
+    margin-left: -12px;
+    margin-right: 20px;
+  }
+
+  .pop-up-text-content {
+    display: block;
+    margin-left: 8px;
+  }
+
+  .see-live-btn {
+    width: 120px;
+    margin-bottom: 10px;
+    padding: 10px 4px;
+  }
+
+  .pop-up-btn {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+  }
+
+  .see-source-btn {
+    width: 120px;
+    padding: 12px 4px;
+  }
+
   nav.menu-btn {
     display: block;
     position: absolute;
@@ -820,6 +1232,162 @@ li.language {
     background-repeat: no-repeat;
     background-color: #e5e5e5;
     border-top: none;
+  }
+
+  .popover-all {
+    display: none;
+  }
+
+  .section-c img.desck-top {
+    display: none;
+  }
+
+  div.popover-display {
+    display: block;
+  }
+
+  .pop-over {
+    width: 343px;
+    height: 713px;
+    z-index: 100;
+    background-color: #fff;
+    margin-left: 16px;
+    margin-top: 24px;
+    opacity: 1;
+    border-radius: 16px;
+  }
+
+  .section-a {
+    display: flex;
+    flex-direction: row;
+    padding: 0 16px 0 16px;
+    margin-top: 0;
+    justify-content: space-between;
+  }
+
+  .section-a h2 {
+    width: 259px;
+    height: 36px;
+    font-family: Poppins-bold, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 44px;
+    margin-top: 18px;
+  }
+
+  .section-a img {
+    margin-top: 18px;
+  }
+
+  .section-b ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    margin-left: -20px;
+    font-family: Poppins-bold, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    color: #7a869a;
+  }
+
+  .section-b li:first-child {
+    list-style-type: none;
+    width: 55px;
+    height: 16px;
+    color: #344563;
+  }
+
+  .section-b li {
+    margin-right: 25px;
+    margin-top: 10px;
+  }
+
+  .section-d {
+    width: 311px;
+    font-family: Poppins-bold, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #344563;
+    margin-left: auto;
+    margin-right: auto;
+
+    /* border: 1px solid; */
+  }
+
+  .section-d p {
+    padding: 2px 0 2px 5px;
+  }
+
+  .section-e .nav-pop ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-family: Poppins-bold, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    list-style-type: none;
+    margin-left: -20px;
+    margin-top: 20px;
+  }
+
+  .section-e ul li {
+    margin-right: 10px;
+    align-items: center;
+    padding: 4px 12px;
+    background: #ebebff;
+    border-radius: 8px;
+  }
+
+  .section-f {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 16px;
+  }
+
+  .section-f button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 138px;
+    height: 48px;
+    color: #396df2;
+    background-color: #fff;
+    border: 1px solid #396df2;
+    border-radius: 8px;
+    margin-right: 20px;
+  }
+
+  .section-f button p {
+    display: flex;
+    align-items: center;
+    height: 20px;
+    margin-left: 5px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    margin-right: 10px;
+    margin-top: 8px;
+  }
+
+  .section-f button img {
+    padding-right: 6px;
   }
 
   .discription {
@@ -1042,7 +1610,7 @@ li.language {
 
   .up-down {
     position: absolute;
-    right: 45px;
+    left: 192px;
     border-bottom: none;
   }
 
