--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
   margin-right: auto;
 }
 
+/* submition form */
+.if-false {
+  font-family: poppins, sans-serif;
+  color: red;
+  font-size: 20px;
+}
+
 .modal {
   padding-top: 50px;
   visibility: hidden;
@@ -1196,6 +1203,7 @@ li.language {
 
   .bars-mob {
     position: absolute;
+    display: block;
     right: 10%;
     width: 24px;
     height: 24px;
