Update css file

--- a/style.css
+++ b/style.css
@@ -1785,4 +1785,10 @@ li.language {
     border-radius: 10px;
     background-color: #0d151e;
   }
+
+  .if-false {
+    font-family: poppins, sans-serif;
+    color: red;
+    font-size: 16px;
+  }
 }
